--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
-    "mocha": "^2.4.5"
+    "mocha": "^2.4.5",
+    "underscore": "^1.8.3"
   }
 }
